[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.36.26",
    "flask>=3.1.0",
    "requests-aws4auth>=1.3.1",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "telegram>=0.0.1",
    "selenium>=4.29.0",
    "webdriver-manager>=4.0.2",
    "beautifulsoup4>=4.13.3",
    "undetected-chromedriver>=3.5.5",
    "python-amazon-simple-product-api>=2.2.11",
    "feedparser>=6.0.11",
    "waitress>=3.0.2",
]
